// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs[Base] should render correctly  1`] = `
<div
  style="height: 100px;"
>
  <div
    class="soui-tabs soui-tabs-tabs"
    data-soui-position="top-left"
    data-soui-shape="line"
  >
    <div
      class="soui-tabs-header-wrapper"
      data-soui-position="top-left"
      data-soui-shape="line"
      dir="ltr"
    >
      <div
        class="soui-tabs-hr"
      />
      <div
        class="soui-tabs-header"
      >
        <div
          class="soui-tabs-header-scroll"
          style="transform: translateX(0px);"
        >
          <div
            class="soui-tabs-tab"
            data-soui-state="active"
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 1
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 2
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-tabs-panel-wrapper"
    >
      <div
        class="soui-tabs-panel soui-tabs-show"
      >
        <div
          style="padding: 16px; height: 100%; font-size: 14px;"
        >
          Content of Tab 1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs[Base] should render correctly about autofill 1`] = `
<div
  style="height: 150px;"
>
  <div
    class="soui-tabs soui-tabs-tabs soui-tabs-auto-fill"
    data-soui-position="top-left"
    data-soui-shape="line"
  >
    <div
      class="soui-tabs-header-wrapper"
      data-soui-position="top-left"
      data-soui-shape="line"
      dir="ltr"
    >
      <div
        class="soui-tabs-hr"
      />
      <div
        class="soui-tabs-header"
      >
        <div
          class="soui-tabs-header-scroll"
          style="transform: translateX(0px);"
        >
          <div
            class="soui-tabs-tab"
            data-soui-state="active"
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 1
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 2
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-tabs-panel-wrapper"
    >
      <div
        class="soui-tabs-panel soui-tabs-show"
      >
        <div
          style="padding: 12px; height: 100%; font-size: 14px; line-height: 20px;"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings. We can never get it by working for it directly. It comes, like happiness, to those who are aiming at something higher. It is a byproduct of great, simple living. The joy of living comes from what we put into living, not from what we seek to get from it. As you travel through life there are always those times when decisions just have to be made when the choices are hard, and solutions seem scarce and the rain seems to soak your parade!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs[Base] should render correctly about collapsible 1`] = `
<div>
  <div
    class="soui-tabs soui-tabs-tabs"
    data-soui-position="top-left"
    data-soui-shape="line"
  >
    <div
      class="soui-tabs-header-wrapper"
      data-soui-position="top-left"
      data-soui-shape="line"
      dir="ltr"
    >
      <div
        class="soui-tabs-hr"
      />
      <div
        class="soui-tabs-collapsible"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            clip-rule="evenodd"
            d="M13.3115 6.00008C13.702 5.60955 14.3352 5.60955 14.7257 6.00008C15.1163 6.3906 15.1163 7.02377 14.7257 7.41429L10.14 12.0001L14.7257 16.5859C15.1163 16.9764 15.1163 17.6096 14.7257 18.0001C14.3352 18.3906 13.702 18.3906 13.3115 18.0001L8.01863 12.7072C7.62811 12.3167 7.62811 11.6835 8.01863 11.293L13.3115 6.00008Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="soui-tabs-header"
      >
        <div
          class="soui-tabs-header-scroll"
          style="transform: translateX(0px);"
        >
          <div
            class="soui-tabs-tab"
            data-soui-state="active"
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 1
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              <span
                style="margin-inline-start: 4px; display: flex; align-items: center;"
              >
                <span
                  style="margin-inline-end: 4px;"
                >
                  Tab2
                </span>
                <svg
                  height="14px"
                  viewBox="0 0 24 24"
                  width="14px"
                >
                  <path
                    d="M16.002 1C16.9526 1 17.9107 1.91116 17.9958 2.86373L18.002 3V4H19.002C19.9526 4 20.9107 4.91116 20.9958 5.86373L21.002 6V22C21.002 22.6984 20.3103 23.1694 19.673 22.9446L19.5674 22.9006L13.502 19.974L7.43652 22.9006C6.84449 23.1863 6.1677 22.8326 6.02798 22.23L6.00823 22.1142L6.00195 22V19.145L4.43652 19.9006C3.84449 20.1863 3.1677 19.8326 3.02798 19.23L3.00823 19.1142L3.00195 19V3C3.00195 2.0725 3.9728 1.09337 4.87382 1.00627L5.00195 1H16.002ZM18.502 6H8.50195C8.25649 6 8.05234 6.17688 8.01001 6.41012L8.00195 6.5V19.6106C8.00195 19.6858 8.01893 19.7601 8.05163 19.8279C8.15829 20.049 8.40631 20.156 8.63478 20.0927L8.71923 20.0609L12.809 18.087L13.0674 17.963C13.2635 17.8684 13.4828 17.8413 13.6922 17.8819L13.8163 17.9143L13.9215 17.9569L13.9511 17.9701L17.6557 19.757L18.2847 20.0609C18.3524 20.0936 18.4267 20.1106 18.502 20.1106C18.7474 20.1106 18.9516 19.9337 18.9939 19.7005L19.002 19.6106V6.5C19.002 6.22386 18.7781 6 18.502 6ZM15.502 3H5.50195C5.25649 3 5.05234 3.17688 5.01001 3.41012L5.00195 3.5V16.6106C5.00195 16.6858 5.01893 16.7601 5.05163 16.8279C5.15829 17.049 5.40631 17.156 5.63478 17.0927L5.71923 17.0609L6.00195 16.924V6C6.00195 5.08197 6.95654 4.09423 7.8716 4.00633L8.00195 4H16.002V3.5C16.002 3.25454 15.8251 3.05039 15.5918 3.00806L15.502 3Z"
                    fill="#666C7C"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              <span
                style="display: flex; align-items: center;"
              >
                <svg
                  height="14px"
                  viewBox="0 0 24 24"
                  width="14px"
                >
                  <path
                    d="M16.002 1C16.9526 1 17.9107 1.91116 17.9958 2.86373L18.002 3V4H19.002C19.9526 4 20.9107 4.91116 20.9958 5.86373L21.002 6V22C21.002 22.6984 20.3103 23.1694 19.673 22.9446L19.5674 22.9006L13.502 19.974L7.43652 22.9006C6.84449 23.1863 6.1677 22.8326 6.02798 22.23L6.00823 22.1142L6.00195 22V19.145L4.43652 19.9006C3.84449 20.1863 3.1677 19.8326 3.02798 19.23L3.00823 19.1142L3.00195 19V3C3.00195 2.0725 3.9728 1.09337 4.87382 1.00627L5.00195 1H16.002ZM18.502 6H8.50195C8.25649 6 8.05234 6.17688 8.01001 6.41012L8.00195 6.5V19.6106C8.00195 19.6858 8.01893 19.7601 8.05163 19.8279C8.15829 20.049 8.40631 20.156 8.63478 20.0927L8.71923 20.0609L12.809 18.087L13.0674 17.963C13.2635 17.8684 13.4828 17.8413 13.6922 17.8819L13.8163 17.9143L13.9215 17.9569L13.9511 17.9701L17.6557 19.757L18.2847 20.0609C18.3524 20.0936 18.4267 20.1106 18.502 20.1106C18.7474 20.1106 18.9516 19.9337 18.9939 19.7005L19.002 19.6106V6.5C19.002 6.22386 18.7781 6 18.502 6ZM15.502 3H5.50195C5.25649 3 5.05234 3.17688 5.01001 3.41012L5.00195 3.5V16.6106C5.00195 16.6858 5.01893 16.7601 5.05163 16.8279C5.15829 17.049 5.40631 17.156 5.63478 17.0927L5.71923 17.0609L6.00195 16.924V6C6.00195 5.08197 6.95654 4.09423 7.8716 4.00633L8.00195 4H16.002V3.5C16.002 3.25454 15.8251 3.05039 15.5918 3.00806L15.502 3Z"
                    fill="#666C7C"
                  />
                </svg>
                <span
                  style="margin-inline-start: 4px;"
                >
                  Tab3
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-tabs-panel-wrapper"
    >
      <div
        class="soui-tabs-panel soui-tabs-show"
      >
        <div
          style="padding: 16px; font-size: 14px;"
        >
          Joy in living comes from having fine emotions, trusting them, giving them the freedom of a bird in the open. Joy in living can never be assumed as a pose, or put on from the outside as a mask. People who have this joy do not need to talk about it; they radiate it. They just live out their joy and let it splash its sunlight and glow into other lives as naturally as bird sings. We can never get it by working for it directly. It comes, like happiness, to those who are aiming at something higher. It is a byproduct of great, simple living. The joy of living comes from what we put into living, not from what we seek to get from it. As you travel through life there are always those times when decisions just have to be made when the choices are hard, and solutions seem scarce and the rain seems to soak your parade!
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs[Base] should render correctly about control 1`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        Tab 1
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        Tab 2
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        Tab 3
      </span>
    </div>
  </div>
  <div
    style="height: 100px;"
  >
    <div
      active="1"
      class="soui-tabs soui-tabs-tabs"
      data-soui-position="top-left"
      data-soui-shape="line"
    >
      <div
        class="soui-tabs-header-wrapper"
        data-soui-position="top-left"
        data-soui-shape="line"
        dir="ltr"
      >
        <div
          class="soui-tabs-hr"
        />
        <div
          class="soui-tabs-header"
        >
          <div
            class="soui-tabs-header-scroll"
            style="transform: translateX(0px);"
          >
            <div
              class="soui-tabs-tab"
              data-soui-state=""
              dir="ltr"
            >
              <div
                class="soui-tabs-line-inner"
              >
                Tab 1
              </div>
            </div>
            <div
              class="soui-tabs-tab"
              data-soui-state="active"
              dir="ltr"
            >
              <div
                class="soui-tabs-line-inner"
              >
                Tab 2
              </div>
            </div>
            <div
              class="soui-tabs-tab"
              data-soui-state=""
              dir="ltr"
            >
              <div
                class="soui-tabs-line-inner"
              >
                Tab 3
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-tabs-panel-wrapper"
      >
        <div
          class="soui-tabs-panel soui-tabs-show"
        >
          <div
            style="padding: 16px; height: 100%; font-size: 14px;"
          >
            Content of Tab 2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs[Base] should render correctly about extra 1`] = `
<div
  style="height: 100px;"
>
  <div
    class="soui-tabs soui-tabs-tabs"
    data-soui-position="top-left"
    data-soui-shape="line"
  >
    <div
      class="soui-tabs-header-wrapper"
      data-soui-position="top-left"
      data-soui-shape="line"
      dir="ltr"
    >
      <div
        class="soui-tabs-hr"
      />
      <div
        class="soui-tabs-header"
      >
        <div
          class="soui-tabs-header-scroll"
          style="transform: translateX(0px);"
        >
          <div
            class="soui-tabs-tab"
            data-soui-state="active"
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 1
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 2
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-tabs-extra"
      >
        <button
          class="soui-button soui-button-primary soui-button-button soui-button-text"
          dir="ltr"
          type="button"
        >
          <span>
            extra operation
          </span>
        </button>
      </div>
    </div>
    <div
      class="soui-tabs-panel-wrapper"
    >
      <div
        class="soui-tabs-panel soui-tabs-show"
      >
        <div
          style="padding: 16px; height: 100%; font-size: 14px;"
        >
          Content of Tab 1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs[Base] should render correctly about position 1`] = `
<div>
  <form
    class="soui-form soui-form-wrapper"
  >
    <div
      class="soui-form-item-wrapper"
      data-soui-status="default"
      style="margin-bottom: 16px;"
    >
      <div
        class="soui-form-item-label soui-form-item-label-left"
        style="width: 65px;"
      >
        Position:
      </div>
      <div
        class="soui-form-item-control"
        data-soui-role="form-control"
      >
        <div
          class="soui-radio-group"
        >
          <div
            class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
          >
            <input
              checked=""
              style="display: none;"
              tabindex="0"
              type="radio"
            />
            <span
              class="soui-radio-indicator-wrapper"
            >
              <span
                class="soui-radio-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-radio-desc"
            >
              top-left
            </span>
          </div>
          <div
            class="soui-radio soui-radio-wrapper"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="radio"
            />
            <span
              class="soui-radio-indicator-wrapper"
            >
              <span
                class="soui-radio-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-radio-desc"
            >
              top-right
            </span>
          </div>
          <div
            class="soui-radio soui-radio-wrapper"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="radio"
            />
            <span
              class="soui-radio-indicator-wrapper"
            >
              <span
                class="soui-radio-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-radio-desc"
            >
              bottom-left
            </span>
          </div>
          <div
            class="soui-radio soui-radio-wrapper"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="radio"
            />
            <span
              class="soui-radio-indicator-wrapper"
            >
              <span
                class="soui-radio-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-radio-desc"
            >
              bottom-right
            </span>
          </div>
          <div
            class="soui-radio soui-radio-wrapper"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="radio"
            />
            <span
              class="soui-radio-indicator-wrapper"
            >
              <span
                class="soui-radio-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-radio-desc"
            >
              left-top
            </span>
          </div>
          <div
            class="soui-radio soui-radio-wrapper"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="radio"
            />
            <span
              class="soui-radio-indicator-wrapper"
            >
              <span
                class="soui-radio-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-radio-desc"
            >
              right-top
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-form-item-wrapper"
      data-soui-status="default"
      style="margin-bottom: 24px;"
    >
      <div
        class="soui-form-item-label soui-form-item-label-left"
        style="width: 65px;"
      >
        Type:
      </div>
      <div
        class="soui-form-item-control"
        data-soui-role="form-control"
      >
        <div
          class="soui-radio-group"
        >
          <div
            class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
          >
            <input
              checked=""
              style="display: none;"
              tabindex="0"
              type="radio"
            />
            <span
              class="soui-radio-indicator-wrapper"
            >
              <span
                class="soui-radio-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-radio-desc"
            >
              line
            </span>
          </div>
          <div
            class="soui-radio soui-radio-wrapper"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="radio"
            />
            <span
              class="soui-radio-indicator-wrapper"
            >
              <span
                class="soui-radio-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-radio-desc"
            >
              card
            </span>
          </div>
          <div
            class="soui-radio soui-radio-wrapper"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="radio"
            />
            <span
              class="soui-radio-indicator-wrapper"
            >
              <span
                class="soui-radio-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-radio-desc"
            >
              button
            </span>
          </div>
          <div
            class="soui-radio soui-radio-wrapper"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="radio"
            />
            <span
              class="soui-radio-indicator-wrapper"
            >
              <span
                class="soui-radio-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-radio-desc"
            >
              fill
            </span>
          </div>
          <div
            class="soui-radio soui-radio-wrapper"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="radio"
            />
            <span
              class="soui-radio-indicator-wrapper"
            >
              <span
                class="soui-radio-indicator"
                tabindex="1"
              />
            </span>
            <span
              class="soui-radio-desc"
            >
              dash
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    style="height: 150px;"
  >
    <div
      class="soui-tabs soui-tabs-tabs soui-tabs-auto-fill"
      data-soui-position="top-left"
      data-soui-shape="line"
    >
      <div
        class="soui-tabs-header-wrapper"
        data-soui-position="top-left"
        data-soui-shape="line"
        dir="ltr"
      >
        <div
          class="soui-tabs-hr"
        />
        <div
          class="soui-tabs-header"
        >
          <div
            class="soui-tabs-header-scroll"
            style="transform: translateX(0px);"
          >
            <div
              class="soui-tabs-tab"
              data-soui-state="active"
              dir="ltr"
            >
              <div
                class="soui-tabs-line-inner"
              >
                Tab 1
              </div>
            </div>
            <div
              class="soui-tabs-tab"
              data-soui-state=""
              dir="ltr"
            >
              <div
                class="soui-tabs-line-inner"
              >
                Tab 2
              </div>
            </div>
            <div
              class="soui-tabs-tab"
              data-soui-state="disabled"
              dir="ltr"
            >
              <div
                class="soui-tabs-line-inner"
              >
                Tab 3
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="soui-tabs-panel-wrapper"
      >
        <div
          class="soui-tabs-panel soui-tabs-show"
        >
          <div
            style="padding: 16px; font-size: 14px;"
          >
            Content of Tab 1
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs[Base] should render correctly about scroll 1`] = `
<div
  style="height: 100px;"
>
  <div
    class="soui-tabs soui-tabs-tabs"
    data-soui-position="top-left"
    data-soui-shape="line"
  >
    <div
      class="soui-tabs-header-wrapper"
      data-soui-position="top-left"
      data-soui-shape="line"
      dir="ltr"
    >
      <div
        class="soui-tabs-hr"
      />
      <div
        class="soui-tabs-header"
      >
        <div
          class="soui-tabs-header-scroll"
          style="transform: translateX(0px);"
        >
          <div
            class="soui-tabs-tab"
            data-soui-state="active"
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 1
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 2
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 3
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 4
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 5
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 6
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 7
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 8
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 9
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 10
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 11
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 12
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 13
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 14
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 15
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 16
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 17
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 18
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 19
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 20
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 21
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 22
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 23
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 24
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 25
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 26
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 27
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 28
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 29
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 30
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 31
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 32
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 33
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 34
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 35
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 36
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 37
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 38
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 39
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 40
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 41
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 42
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 43
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 44
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 45
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 46
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 47
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 48
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 49
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 50
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 51
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 52
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 53
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 54
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 55
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 56
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 57
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 58
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 59
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 60
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 61
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 62
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 63
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 64
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 65
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 66
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 67
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 68
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 69
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 70
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 71
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 72
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 73
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 74
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 75
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 76
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 77
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 78
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 79
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 80
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 81
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 82
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 83
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 84
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 85
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 86
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 87
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 88
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 89
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 90
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 91
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 92
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 93
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 94
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 95
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 96
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 97
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 98
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 99
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 100
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-tabs-panel-wrapper"
    >
      <div
        class="soui-tabs-panel soui-tabs-show"
      >
        <div
          style="padding: 16px; height: 100%; font-size: 14px;"
        >
          Content of Tab 1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs[Base] should render correctly about shape 1`] = `
<div
  style="height: 100px;"
>
  <div
    class="soui-tabs soui-tabs-tabs"
    data-soui-position="top-left"
    data-soui-shape="line"
  >
    <div
      class="soui-tabs-header-wrapper"
      data-soui-position="top-left"
      data-soui-shape="line"
      dir="ltr"
    >
      <div
        class="soui-tabs-hr"
      />
      <div
        class="soui-tabs-header"
      >
        <div
          class="soui-tabs-header-scroll"
          style="transform: translateX(0px);"
        >
          <div
            class="soui-tabs-tab"
            data-soui-state="active"
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 1
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 2
            </div>
          </div>
          <div
            class="soui-tabs-tab"
            data-soui-state=""
            dir="ltr"
          >
            <div
              class="soui-tabs-line-inner"
            >
              Tab 3
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="soui-tabs-panel-wrapper"
    >
      <div
        class="soui-tabs-panel soui-tabs-show"
      >
        <div
          style="padding: 16px; height: 100%; font-size: 14px;"
        >
          Content of Tab 1
        </div>
      </div>
    </div>
  </div>
</div>
`;
